--- a/stye.css
+++ b/stye.css
@@ -1,7 +1,7 @@
 
 
 .bg-img {
-  background-image: url("556438.jpg");
+  background-image: url("resources/556438.jpg");
   background-repeat: no-repeat;
   background-position: center;
   width: 100vw;
